<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <!-- Created by Sarthi Technology-->
    <!-- www.youtube.com/SarthiTechnology-->
    <!-- www.facebook.com/SarthiTechnology-->

    <!-- My Dear Friends, Thanks for your kind support for my youtube channel.-->

    <!-- Please make sure that you are using Relative Layout for below codes-->


    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/connection_status"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/connectedTo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discoverPeers" />

    <Button
        android:id="@+id/wifiOnOff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:text="@string/wifi_button"
        app:layout_constraintBottom_toTopOf="@+id/discoverPeers"
        app:layout_constraintEnd_toStartOf="@+id/btOnOff"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/connectionStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/discoverPeers"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/wifiOnOff"
        android:layout_alignBottom="@+id/wifiOnOff"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/discover_button"
        app:layout_constraintBottom_toTopOf="@+id/connectionStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wifiOnOff" />

    <ListView
        android:id="@+id/peerListView"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/wifiOnOff"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintBottom_toTopOf="@+id/_dynamic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectedTo" />

    <EditText
        android:id="@+id/writeMsg"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@+id/sendButton"
        android:ems="10"
        android:hint="@string/send_message_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sendButton"
        app:layout_constraintTop_toBottomOf="@+id/_dynamic" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:text="Send"
        app:layout_constraintBaseline_toBaselineOf="@+id/writeMsg"
        app:layout_constraintEnd_toStartOf="@+id/writeMsg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/connectedTo"
        android:layout_width="368dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/connected_to"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/peerListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectionStatus" />

    <Button
        android:id="@+id/btOnOff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/bluetooth_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/wifiOnOff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wifiOnOff" />

    <ListView
        android:id="@+id/messageChatView"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/writeMsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peerListView" />

</android.support.constraint.ConstraintLayout>